@@ -3,6 +3,7 @@ Version: 0.0.4
 Date: ????
   Info:
     - Setup the hidden blueprintable entity
+    - Prevent the combinator from being placed somewhere without belts
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 2024. 11. 12
